# agentvault

./: .gitignore  README.md  pyproject.toml
agentvault/: __init__.py
agentvault/embed/: embedder.py  similarity.py
agentvault/filters/: expression_parser.py
agentvault/runtime/: safe_globals.py
agentvault/search/: search_plugin.py
agentvault/security/: sanitizer.py
agentvault/store/: inmem_vector_store.py
agentvault/types/: document.py  exceptions.py  query.py
agentvault/util/: logger.py  metrics.py
tests/: test_agentvault_baseline.py
