[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvault"
version = "0.4.2"
description = "In-memory vector store with attribute filters"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "agentvault contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-json-report>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentvault*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "__eval_*.py"]
addopts = "-ra"
